--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: WebService-Eulerian-Analytics
-version: 0.4
+version: 0.5
 author:
   - 'Mathieu Jondet <mathieu@eulerian.com>'
 abstract: Eulerian Analytics API
@@ -13,11 +13,13 @@ requires:
 provides:
   WebService::Eulerian::Analytics:
     file: lib/WebService/Eulerian/Analytics.pm
-    version: 0.4
+    version: 0.5
   WebService::Eulerian::Analytics::TPOrderInject:
     file: lib/WebService/Eulerian/Analytics/TPOrderInject.pm
   WebService::Eulerian::Analytics::Website:
     file: lib/WebService/Eulerian/Analytics/Website.pm
+  WebService::Eulerian::Analytics::Website::Ope:
+    file: lib/WebService/Eulerian/Analytics/Website/Ope.pm
   WebService::Eulerian::Analytics::Website::Order:
     file: lib/WebService/Eulerian/Analytics/Website/Order.pm
   WebService::Eulerian::Analytics::Website::TPCategory:
