--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: WebService-Eulerian-Analytics
-version: 0.6
+version: v0.6.1
 author:
   - 'Mathieu Jondet <mathieu@eulerian.com>'
 abstract: Eulerian Analytics API
@@ -10,10 +10,12 @@ resources:
 requires:
   SOAP::Lite: '>= 0.710.08'
   perl: '>= 5.10.0'
+configure_requires:
+  Module::Build: 0.35
 provides:
   WebService::Eulerian::Analytics:
     file: lib/WebService/Eulerian/Analytics.pm
-    version: 0.6
+    version: v0.6.1
   WebService::Eulerian::Analytics::TPOrderInject:
     file: lib/WebService/Eulerian/Analytics/TPOrderInject.pm
   WebService::Eulerian::Analytics::Website:
@@ -32,7 +34,7 @@ provides:
     file: lib/WebService/Eulerian/Analytics/Website/TPOpedataClick.pm
   WebService::Eulerian::Analytics::Website::TPPublisher:
     file: lib/WebService/Eulerian/Analytics/Website/TPPublisher.pm
-generated_by: Module::Build version 0.33
+generated_by: Module::Build version 0.35
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
